--- a/ac_app/templates/base.html
+++ b/ac_app/templates/base.html
@@ -22,5 +22,6 @@
     {% block content %}
     {% endblock %}
     {% include 'include/footer.html' %}
+    <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
