--- a/ac_app/static/css/base.css
+++ b/ac_app/static/css/base.css
@@ -303,6 +303,83 @@ main { min-height: calc(100vh - 150px); }
 }
 /* end */
 
+/* выдвижное меню справа*/
+.menu-account {
+    max-width: 350px;
+    min-width: 250px;
+    position: fixed;
+    top: 80px;
+    right: -400px;
+    padding: 10px;
+    border-radius: 16px;
+    overflow: hidden;
+    font-family: 'Merriweather', serif;
+    box-shadow: inset 0 0 6px 0px var(--shadow);
+    background-color: var(--bg-table);
+    z-index: 4;
+    -webkit-transition: right 0.9s;
+    -ms-transition: right 0.9s;
+    transition: right 0.9s ease;
+}
+
+.icon-close {
+    position: absolute;
+    margin: 5px;
+    top: 0px;
+    left: 0px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.icon-close:hover { transform: scale(0.9); }
+
+.menu-account-logo {
+    display: block;
+    margin: 0 auto;
+    width: 150px;
+    height: auto;
+}
+
+.login-form {
+    margin: 20px 35px 0;
+    text-align: center;
+}
+
+.form-item {
+    width: 240px;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 18px;
+    font-weight: 600;
+    font-family: 'Merriweather', serif;
+    text-align: center;
+    color: var(--text-color);
+    background-color: var(--bg-input);
+    border: none;
+    border-radius: 20px;
+    box-shadow: inset 0 0 2px 0px var(--sleep-color);
+}
+
+.user-log-button {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0 30px;
+}
+
+.form-link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-link a {
+    margin-bottom: 20px;
+    text-align: center;
+    width: max-content;
+    transition: 0.5s;
+}
+/* end */
+
 /* Слайдер */
 .slider {
     position: relative;
