--- a/ac_app/templates/include/menu-account.html
+++ b/ac_app/templates/include/menu-account.html
@@ -2,18 +2,33 @@
 
 <div class="menu-account" id="account-menu">
     <img class="icon-close" src="{% static 'images/close.svg' %}" id="close-menu">
-    <img class="menu-account-logo" src="{% static 'images/log1.svg' %}">
-    <div class="login-form">
-        <form action="" method="post">
-            <input class="form-item" placeholder="Username or Email" type="text">
-            <input class="form-item" placeholder="Password" type="password">
-            <div class="user-log-button"><button class="page-button" type="submit">Sign in</button></div>
-        </form>
-        
-        <div class="form-link">
-            <a href="#">Sign in with Google</a>
-            <a href="#">Forgot password?</a>
-            <a href="#">Sign up</a>
+    {% if request.user.is_authenticated %}
+        <div class="menu-account-user">
+            <img src="{% static 'images/astro.svg' %}">
+            <p>{{ user.first_name|default:user.username }}</p>
         </div>
-    </div>
+        <ul class="menu-account-list">
+            <li class="menu-account-item"><a href="#">Profile</a></li>
+            <li class="menu-account-item"><a href="#">Wish List</a></li>
+            <li class="menu-account-item"><a href="#">Orders</a></li>
+        </ul>
+        <div class="user-log-button">
+            <button class="page-button" type="submit"><a href="{% url 'logout' %}">Sign out</a></button>
+        </div>
+    {% else %}
+        <img class="menu-account-logo" src="{% static 'images/log1.svg' %}">
+        <div class="login-form">
+            <form action="" method="post">
+                <input class="form-item" placeholder="Username or Email" type="text">
+                <input class="form-item" placeholder="Password" type="password">
+                <div class="user-log-button"><button class="page-button" type="submit">Sign in</button></div>
+            </form>
+            
+            <div class="form-link">
+                <a href="#">Sign in with Google</a>
+                <a href="#">Forgot password?</a>
+                <a href="#">Sign up</a>
+            </div>
+        </div>
+    {% endif %}
 </div>
