--- a/ac_app/static/css/base.css
+++ b/ac_app/static/css/base.css
@@ -234,8 +234,7 @@ main { min-height: calc(100vh - 150px); }
 .registration-link a:hover,
 .menu-cart span,
 .active,
-.search-item-info span,
-.auth-success {
+.search-item-info span {
     color: var(--text-hover);
     text-shadow:
         0 5px 10px var(--hover-color),
@@ -308,8 +307,9 @@ main { min-height: calc(100vh - 150px); }
     max-width: 350px;
     min-width: 250px;
     position: fixed;
+    display: none;
     top: 80px;
-    right: -400px;
+    right: 0;
     padding: 10px;
     border-radius: 16px;
     overflow: hidden;
@@ -317,10 +317,9 @@ main { min-height: calc(100vh - 150px); }
     box-shadow: inset 0 0 6px 0px var(--shadow);
     background-color: var(--bg-table);
     z-index: 4;
-    -webkit-transition: right 0.9s;
-    -ms-transition: right 0.9s;
-    transition: right 0.9s ease;
 }
+
+.account-menu-open { display: block; }
 
 .icon-close {
     position: absolute;
@@ -358,6 +357,20 @@ main { min-height: calc(100vh - 150px); }
     border: none;
     border-radius: 20px;
     box-shadow: inset 0 0 2px 0px var(--sleep-color);
+}
+
+/* ✓ подтверждение */
+.login-success, .password-success  {
+    color: var(--hover-color);
+    position: absolute;
+    left: 15px;
+    top: 94px;
+}
+
+.password-success { top: 156px; }
+.login-success::before, .password-success::before {
+    content: "\2713";  /* Юникод "✓" */
+    font-size: 35px;
 }
 
 /* меню после авторизации */
