--- a/ac_app/templates/base.html
+++ b/ac_app/templates/base.html
@@ -15,6 +15,7 @@
 
     <link rel="shortcut icon" href="{% static 'images/logicon.svg' %}" type="image/x-icon"/>
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/page-style.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <script src="{% static 'js/htmx.min.js' %}"></script>
 </head>
