--- a/ac_app/static/css/page-style.css
+++ b/ac_app/static/css/page-style.css
@@ -100,6 +100,12 @@
     background-color: var(--bg-table);
 }
 
+.signup-form h1 {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
 .signup-link {
     width: 200px;
     display: flex;
