--- a/ac_app/templates/include/menu-account.html
+++ b/ac_app/templates/include/menu-account.html
@@ -23,7 +23,7 @@
             <div class="form-link">
                 <a href="#">Sign in with Google</a>
                 <a href="#">Forgot password?</a>
-                <a href="#">Sign up</a>
+                <a href="{% url 'signup' %}">Sign up</a>
             </div>
         </div>
     {% endif %}
