--- a/ac_app/static/css/base.css
+++ b/ac_app/static/css/base.css
@@ -153,7 +153,6 @@ main { min-height: calc(100vh - 150px); }
     padding: 0 10px;
     margin: 100px auto;
 } 
-/* general styles end */
 
 /* main-menu */
 .header{
@@ -300,9 +299,8 @@ main { min-height: calc(100vh - 150px); }
    height: auto;
    cursor: pointer;
 }
-/* end */
 
-/* выдвижное меню справа*/
+/* Modal account */
 .menu-account {
     max-width: 350px;
     min-width: 250px;
@@ -359,7 +357,6 @@ main { min-height: calc(100vh - 150px); }
     box-shadow: inset 0 0 2px 0px var(--sleep-color);
 }
 
-/* ✓ подтверждение */
 .login-success, .password-success  {
     color: var(--hover-color);
     position: absolute;
@@ -369,11 +366,10 @@ main { min-height: calc(100vh - 150px); }
 
 .password-success { top: 156px; }
 .login-success::before, .password-success::before {
-    content: "\2713";  /* Юникод "✓" */
+    content: "\2713";
     font-size: 35px;
 }
 
-/* меню после авторизации */
 .menu-account-user {
     display: flex;
     justify-content: center;
@@ -425,9 +421,8 @@ main { min-height: calc(100vh - 150px); }
     width: max-content;
     transition: 0.5s;
 }
-/* end */
 
-/* Слайдер */
+/* Slider */
 .slider {
     position: relative;
     margin: 0 auto;
@@ -516,4 +511,3 @@ main { min-height: calc(100vh - 150px); }
 .footer-contacts span { margin-left: 10px; }
 
 .social-x { margin-right: 10px; }
-/* footer end */
