--- a/ac_app/templates/account/edit_profile.html
+++ b/ac_app/templates/account/edit_profile.html
@@ -46,7 +46,7 @@
                     <div class="buttons"><button class="page-button" type="submit">Update profile</button></div>
                 </form>
                 <div class="edit-links">
-                    <a class="page-link" href="#">Change password</a>
+                    <a class="page-link" href="{% url 'password_change' %}">Change password</a>
                     <a class="page-link delete-link" href="#">Delete account</a>
                 </div>
             </div>
