--- a/ac_app/templates/registration/login.html
+++ b/ac_app/templates/registration/login.html
@@ -25,8 +25,8 @@
                 <div class="user-log-button"><button class="page-button" type="submit">Sign in</button></div>
             </form>
             <div class="registration-link">
-                <a href="#">Forgot password?</a>
-                <a href="#">Sign up</a>
+                <a href="{% url 'password_reset' %}">Forgot password?</a>
+                <a href="{% url 'signup' %}">Sign up</a>
             </div>
         </div>
     </div>
