--- a/ac_app/templates/account/edit_profile.html
+++ b/ac_app/templates/account/edit_profile.html
@@ -47,7 +47,7 @@
                 </form>
                 <div class="edit-links">
                     <a class="page-link" href="{% url 'password_change' %}">Change password</a>
-                    <a class="page-link delete-link" href="#">Delete account</a>
+                    <a class="page-link delete-link" href="{% url 'delete_account' %}">Delete account</a>
                 </div>
             </div>
         </div>
