--- a/ac_app/static/css/page-style.css
+++ b/ac_app/static/css/page-style.css
@@ -16,10 +16,26 @@
     overflow-wrap: anywhere;
 }
 
-.buttons {
+.buttons, 
+.confirm-button {
     display: flex;
     justify-content: center;
     margin-top: 20px;
+}
+
+.confirm-button { margin-bottom: 10px; }
+
+.confirm-button button {
+    margin: 0 10px;
+    background: none;
+    color: var(--sleep-color);
+    border: 1px solid var(--sleep-color);
+    border-radius: 15px;
+    padding: 5px 15px;
+    font-family: 'Merriweather', serif;
+    font-size: 1rem; /* =16px */
+    cursor: pointer;
+    transition: 0.9s;
 }
 
 .checkbox { display: none; }
@@ -40,6 +56,11 @@
     display: block;
     margin-left: 2px;
     margin-top: -12px;
+}
+
+.label-checkbox {
+    display: block;
+    margin: 30px 0;
 }
 
 /* account/profile */
@@ -228,11 +249,14 @@
     font-size: 18px;
 }
 
-.registration-form p { margin-bottom: 30px; }
-
-.text-note {
-    font-family: 'Roboto Condensed', sans-serif;
-    margin-top: 30px;
+.registration-form p {
+    margin: 30px auto;
+    width: 80%;
 }
 
-.text-note p { margin: 0 0 10px; }
+.text-note { 
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-top: 20px;
+}
+
+.text-note p { margin: 0 auto 10px; }
