--- a/ac_app/static/css/page-style.css
+++ b/ac_app/static/css/page-style.css
@@ -260,3 +260,43 @@
 }
 
 .text-note p { margin: 0 auto 10px; }
+
+/* space listView */
+.news-wrapper {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    gap: 20px;
+    margin: 0 5px 40px;
+    text-align: justify;
+}
+
+.news-wrapper img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border: 1px solid var(--text-color);
+    border-radius:10px;
+}
+
+.news {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.news h2 {
+    font-family: 'Merriweather', serif;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.date { margin-top: 5px; }
+
+.item-info { margin-bottom: 5px; }
+
+.item-info span {
+    margin: 0 5px;
+    font-size: 16px;
+    font-weight: 400;
+}
+
