--- a/ac_app/templates/include/header.html
+++ b/ac_app/templates/include/header.html
@@ -11,7 +11,7 @@
             <ul class="menu-list">
                 {% with request.resolver_match.url_name as url_name %}
                     <li class="menu-item {% if url_name == 'news' %}active{% endif %}">
-                        <a href="#">News</a>
+                        <a href="{% url 'news' %}">News</a>
                     </li>
                     <li class="menu-item {% if url_name == 'stars' %}active{% endif %}">
                         <a href="#">Stars</a>
