--- a/ac_app/static/css/page-style.css
+++ b/ac_app/static/css/page-style.css
@@ -24,7 +24,9 @@
 .pagin-arrows:hover { box-shadow: 0 0 4px 4px var(--hover-color); }
 
 .edit-input, 
-.edit-text-input {
+.edit-text-input,
+.comment-input,
+.comment-text {
     padding: 5px;
     font-size: 18px;
     color: var(--text-color);
@@ -345,4 +347,128 @@
     margin: 0 auto;
     border: 1px solid var(--text-color);
     border-radius:10px;
+}
+
+/* comments */
+.comments-count {
+    font-size: 20px;
+    margin: 20px 20px 30px;
+}
+
+.comments-count span {
+    margin-right: 5px;
+    font-size: 22px;
+}
+
+.comment,
+.comments-box { margin: 10px; }
+
+.comment-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-family: 'Merriweather', serif;
+}
+
+.comment-item p { width: 100%;}
+
+.comment-user {
+    width: 100px;
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.comment-user p {
+    text-align: center;
+    word-break: break-all;
+}
+
+.comment-user img {
+    width: 50px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    box-shadow: inset 0 0 2px 0px var(--sleep-color);
+}
+
+.comment-text {
+    width: 100%;
+    max-height: 100px;
+    text-align: left;
+}
+
+.comment-button { justify-content: end; }
+
+.comments-list { margin-top: 30px }
+
+.comment-wrapper { margin-bottom: 25px; }
+
+.comment-author {
+    font-size: 18px;
+    font-family: 'Merriweather', serif;
+    margin-bottom: 10px;
+}
+
+.comment-author span {
+    margin-left: 10px;
+    font-size: 14px;
+    font-family: 'Roboto Condensed', sans-serif;    
+}
+
+.comment-content {
+    text-align: justify;
+    margin-bottom: 20px;
+    background-color: #10131c82;
+    box-shadow: inset 0 0 2px 0px var(--sleep-color);
+    border-radius: 10px;
+    padding: 10px;
+    word-break: break-all;
+}
+
+.comment-controls {
+    display: flex;
+    font-family: 'Merriweather', serif;
+    color: var(--sleep-color);
+}
+
+.user-comment-delete a,
+.comment-controls a {
+    min-width: 70px;
+    text-align: center;
+    border: 1px solid;
+    border-radius: 16px;
+    padding: 5px 10px;
+}
+
+.comment-controls a:first-child { margin-right: 20px;}
+
+.user-comment-delete a:hover,
+.comment-controls a:hover {
+    color: var(--text-color);
+    border-color: var(--shadow);
+    transition: 0.5s;
+}
+
+/* modal confirm delete comment */
+.confirm-delete-box {
+    display: none;
+    position:fixed;
+    left: 50%;
+    top: 50%;
+    margin: -50px -200px;  
+    z-index: 1;
+    text-align: center;
+}
+
+.confirm-delete {
+    padding: 20px;
+    border-radius: 16px;
+    box-shadow: inset 0 0 10px 0px var(--shadow);
+    background-color: var(--bg-table);
+}
+
+.confirm-delete p {
+    margin-bottom: 30px;
+    font-family: 'Merriweather', serif;
 }
