--- a/ac_app/templates/space/news.html
+++ b/ac_app/templates/space/news.html
@@ -4,19 +4,7 @@
     <main class="main">
         <div class="container">
             <h1 class="page-title">Space News</h1>
-            {% for news in news_list %}
-                <div class="news-wrapper">
-                    <a class="img-link" href="{{ news.get_absolute_url }}">
-                        {% if news.image %}<img src="{{ news.image.url }}" alt="img">{% endif %}
-                    </a>
-                    <div class="news">
-                        <h2><a href="{{ news.get_absolute_url }}">
-                            {{ news.title|truncatewords:20 }}</a></h2>
-                        <p>{{ news.description|truncatewords:50 }}</p>
-                        <p class="date">{{ news.time_create|date:"F j, Y" }}</p>
-                    </div>
-                </div>
-            {% endfor %}
+            <div id="space_news">{% include 'include/space/other_news.html' %}</div>
         </div>
     </main>
 {% endblock %}
