--- a/ac_app/templates/include/header.html
+++ b/ac_app/templates/include/header.html
@@ -17,7 +17,7 @@
                         <a href="#">Stars</a>
                     </li>
                     <li class="menu-item {% if url_name == 'constellations' %}active{% endif %}">
-                        <a href="#">Сonstellations</a>
+                        <a href="{% url 'constellations' %}">Сonstellations</a>
                     </li>
                     <li class="menu-item {% if url_name == 'products' %}active{% endif %}">
                         <a href="#">Shop</a>
