--- a/ac_app/templates/account/profile.html
+++ b/ac_app/templates/account/profile.html
@@ -39,7 +39,7 @@
                 <div class="profile-links">
                     <ul>
                         <li><a class="page-link" href="{% url 'edit_profile' %}">Edit Profile</a></li>
-                        <li><a class="page-link" href="#">Comments</a></li>
+                        <li><a class="page-link" href="{% url 'user_comments' %}">Comments</a></li>
                         <li><a class="page-link" href="#">Favorite Stars</a></li>
                         <li><a class="page-link" href="#">Show Wish List</a></li>
                         <li><a class="page-link" href="#">View Orders</a></li>
