--- a/ac_app/templates/space/news_detail.html
+++ b/ac_app/templates/space/news_detail.html
@@ -14,20 +14,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="detail-control">
-                    {% if prev_item %}
-                        <a class="pagin-arrows" href="{{ prev_item.get_absolute_url }}">
-                            <img class="page-arrows" src="{% static 'images/arrow_left.svg' %}" alt="img">  
-                        </a>
-                    {% endif %}
-                    <a class="page-link" href="{{ news_list }}">All News</a>
-                    {% if next_item %}
-                        <a class="pagin-arrows" href="{{ next_item.get_absolute_url }}">
-                            <img class="page-arrows" src="{% static 'images/arrow_right.svg' %}" alt="img">
-                        </a>
-                    {% endif %}
-                </div>
-                <hr>
+                {% include "include/pagination/item_navigator.html" with return_url='news' items_name='News' %}
                 {% with comments.count as total_comments %}
                     <h1 class="comments-count">
                         <span>{{ total_comments }}</span>Comment{{ total_comments|pluralize }}
@@ -35,7 +22,7 @@
                 {% endwith %}
                 {% include 'include/space/news_comment.html' %}
                 {% include 'include/space/comments_list.html' %}
-                {% include 'include/space/confirm_delete.html' with target_slug=news.slug %}            
+                {% include 'include/space/confirm_delete.html' with target_slug=news.slug %}
             </div>
         </div>
     </main>
