SpectralClass, Star page

--- a/ac_app/templates/include/header.html
+++ b/ac_app/templates/include/header.html
@@ -14,7 +14,7 @@
                         <a href="{% url 'news' %}">News</a>
                     </li>
                     <li class="menu-item {% if url_name == 'stars' %}active{% endif %}">
-                        <a href="#">Stars</a>
+                        <a href="{% url 'stars' %}">Stars</a>
                     </li>
                     <li class="menu-item {% if url_name == 'constellations' %}active{% endif %}">
                         <a href="{% url 'constellations' %}">Сonstellations</a>
