--- a/ac_app/static/css/page-style.css
+++ b/ac_app/static/css/page-style.css
@@ -524,3 +524,152 @@
     margin-bottom: 30px;
     font-family: 'Merriweather', serif;
 }
+
+/* space stars */
+/* sidebar Spectral classes */
+.spectral-classes {
+    position: fixed;
+    top: 185px;
+    left: 76px;
+    z-index: 1;
+}
+
+.spectral-title {
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 16px;
+}
+
+.spectral-item{
+    text-align: center;
+    padding: 10px;
+    border-radius: 33px;
+    box-shadow: inset 0 0 6px 0px var(--shadow);
+    background-color: var(--bg-table);
+}
+
+.classes-wrapper {
+    width: 50px;
+    height: 50px;
+}
+
+.selected {
+    box-shadow: inset 0 0 3px 1px var(--shadow);
+    border-radius: 50%;
+}
+
+.spectral-wrapper { position: relative; }
+
+.spectral-wrapper img {
+    width: 50px;
+    height: 50px;
+}
+
+.spectral-wrapper img:hover { background: radial-gradient(75em 75em, var(--hover-color), rgba(0, 53, 97, 0) 2%); }
+
+.spectral-description {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 63px;
+    width: 350px;
+    padding: 10px;
+    box-shadow: inset 0 0 6px 0px var(--shadow);
+    background-color: var(--bg-table);
+    border-radius: 10px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.spectral-wrapper:hover .spectral-description {
+    visibility: visible;
+    opacity: 1;
+}
+
+.spectral-description li {
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 5px;
+}
+
+.spectral-description h2, 
+.spectral-description p {
+    padding-right: 10px;
+    text-align: justify;
+}
+/* sidebar end */
+
+.stars-content {
+    margin-left: 30px;
+    text-align: center;
+    max-width: 840px;
+}
+
+.extra-content { margin: 0 0 50px 5px; }
+
+.extra-content h2 {
+    font-size: 20px;
+    margin: 50px 0 30px;
+} 
+
+.extra-content p {
+    margin: 20px 10px;
+    text-align: justify;
+}
+
+.extra-content h3 {
+    font-size: 18px;
+    text-align: left;
+    margin: 30px 10px 20px;
+}
+
+.spectral-span {
+    margin-left: 10px;
+    text-transform: uppercase;
+}
+
+.stars-wrapper {
+    display: flex;
+    margin: 0 5px 20px;
+    border-radius: 20px;
+    text-align: justify;
+    align-items: center;
+}
+
+.stars-wrapper img {
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    border-radius:10px;
+    border: 1px solid var(--shadow);
+}
+
+.star { margin-left: 20px; }
+
+.star-title {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.constellation-link {
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-left: 5px;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.constellation-link a {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
+}
+
+.star-info { margin-bottom: 10px; }
+
+.star-info span {
+    margin-left: 5px;
+    font-size: 16px;
+    font-weight: 400;
+}
