--- a/ac_app/templates/account/profile.html
+++ b/ac_app/templates/account/profile.html
@@ -40,7 +40,7 @@
                     <ul>
                         <li><a class="page-link" href="{% url 'edit_profile' %}">Edit Profile</a></li>
                         <li><a class="page-link" href="{% url 'user_comments' %}">Comments</a></li>
-                        <li><a class="page-link" href="#">Favorite Stars</a></li>
+                        <li><a class="page-link" href="{% url 'user_favorites' %}">Favorite Stars</a></li>
                         <li><a class="page-link" href="#">Show Wish List</a></li>
                         <li><a class="page-link" href="#">View Orders</a></li>
                     </ul>
