--- a/ac_app/static/css/page-style.css
+++ b/ac_app/static/css/page-style.css
@@ -23,6 +23,19 @@
 
 .pagin-arrows:hover { box-shadow: 0 0 4px 4px var(--hover-color); }
 
+.pagination-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    font-size: 20px;
+}
+
+.pagination-list li {
+    margin: 0 10px;
+    font-family: 'Merriweather', serif;
+}
+
 .edit-input, 
 .edit-text-input,
 .comment-input,
@@ -754,6 +767,16 @@
     margin: 0 10px 20px;
     font-weight: 400;
     font-size: 18px;
+}
+
+.sort-form span select {
+    margin-left: 10px;
+    padding: 0 5px;
+    height: 25px;
+    color: var(--text-color);
+    font-size: 16px;
+    background-color: var(--bg-input);
+    border-radius: 5px;
 }
 
 .products { text-align: center; }
