--- a/ac_app/static/css/page-style.css
+++ b/ac_app/static/css/page-style.css
@@ -101,6 +101,25 @@
     margin: 30px 0;
 }
 
+.discount {
+    display: flex;
+    justify-content: center;
+}
+
+.discount span { margin-left: 5px; }
+
+.discount_detail { justify-content: left; }
+
+.discount p:first-child {
+    margin-right: 10px;
+    color: #393e4a;
+}
+
+.discount p:last-child {
+    margin-left: 10px;
+    color: var(--hover-color);
+}
+
 /* account/profile */
 .profile {
     max-width: 500px;
@@ -383,6 +402,8 @@
 }
 
 /*  space detail */
+.detail-box .detail-title { text-align: left; }
+
 .space-news-content,
 .constellation-content,
 .star-detail-content {
@@ -824,3 +845,88 @@
 }
 
 .shop-brands li { padding: 5px; }
+
+/* product detail */
+.product-detail-wrapper {
+    width: 100%;
+}
+
+.product-detail {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.product-images {
+    width: 50%;
+    text-align: center;
+}
+
+.main-image {
+    width: 100%;
+    height: 500px;
+    object-fit: contain;
+}
+
+.thumbnails-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.thumbnail {
+    width: 20%;
+    height: auto;
+    margin: 10px 0 0 5px;
+    border-radius: 10px;
+    border: 1px solid var(--text-color);
+    cursor: pointer;
+}
+
+.thumbnail:first-child { margin-left: 0; }
+
+.product-main {
+    width: 45%;
+    margin-left: 5%;
+}
+
+.product-main h1 {
+    font-family: 'Merriweather', serif;
+    font-size: 25px;
+}
+
+.product-info { margin-bottom: 20px; }
+
+.info-row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.info-title { flex-basis: 70px; }
+
+.product-price {
+    font-family: 'Merriweather', serif;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.product-price span {
+    margin-left: 5px;    
+    font-size: 25px;
+}
+
+.add-cart { margin-top: 30px; }
+
+.add-cart a { margin-left: 25px; }
+
+.product-description {
+    margin: 0 20px;
+    text-align: justify;
+}
+
+.product-description h1 { margin-bottom: 30px; }
+
+.product-description li {
+    list-style-type: disc;
+    margin-left: 20px;
+}
