--- a/ac_app/static/css/page-style.css
+++ b/ac_app/static/css/page-style.css
@@ -930,3 +930,31 @@
     list-style-type: disc;
     margin-left: 20px;
 }
+
+.wishlist { margin-top: 10px; }
+
+.remove-wishlist-img,
+.add-wishlist-img,
+.remove-wishlist {
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+    border: none;
+}
+
+.wishlist-button {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    font-family: 'Merriweather', serif;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--sleep-color);
+    background: none;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    transition: 0.5s;
+}
+
+.wishlist-button:hover { color: var(--text-color); }
