--- a/ac_app/templates/include/menu-account.html
+++ b/ac_app/templates/include/menu-account.html
@@ -10,7 +10,7 @@
         </div>
         <ul class="menu-account-list">
             <li class="menu-account-item"><a href="{{ user.get_absolute_url }}">Profile</a></li>
-            <li class="menu-account-item"><a href="#">Wish List</a></li>
+            <li class="menu-account-item"><a href="{% url 'user_wish_list' %}">Wish List</a></li>
             <li class="menu-account-item"><a href="#">Orders</a></li>
         </ul>
         <div class="user-log-button">
