--- a/ac_app/templates/shop/product_detail.html
+++ b/ac_app/templates/shop/product_detail.html
@@ -45,7 +45,7 @@
                             </li>
                         </ul>
                         <h1>{{ product.name }}</h1>
-                        <form class="wishlist" method="post" action="{% url 'wishlist' product.slug %}" 
+                        <form class="wishlist" method="post" action="{% url 'wishlist' product.slug %}"
                         id="favourite-wishlist-form-ajax">
                             {% csrf_token %}
                             <button type="submit" class="wishlist-button">
@@ -70,7 +70,9 @@
                                 <p>$<span>{{ product.price }}</span></p>
                             {% endif %}
                         </div>
-                        <form class="add-product-form">
+                        <form class="add-product-form" action="{% url 'cart_add' product.id %}" method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="quantity" value="1" id="id_quantity">
                             <div class="add-cart">
                                 <button class="page-button" type="submit">Add To Cart</button>
                                 <a href="#">View shipping estimates</a>
